# NeuroCorrelation_android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: neuron.Fshader  neuron.shader  synapse.Fshader  synapse.shader
app/src/main/cpp/: NeuCor.cpp  NeuCor.h  NeuCor_Renderer.cpp  NeuCor_Renderer.h  native-lib.cpp
app/src/main/java/com/example/axel/spikingbrain/: BrainDrawer.java  LibJNIWrapper.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  RendererWrapper.java  Triangle.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
